tests/error/linear_errors/enum_unused_field2.err
Error: Drop violation (at $FILE:17:8)
   | 
15 | 
16 | @guppy
17 | def foo(s: MyEnum1 @owned) -> int:
   |         ^^^^^^^^^^^^^^^^^ Variable `s` with non-droppable type `MyEnum1` is leaked

Help: Make sure that `s` is consumed or returned to avoid the leak

Guppy compilation failed due to 1 previous error
